<resources>
    <string name="app_name">App mobile final project</string>
    <string name="window_main">AR Mode</string>
    <string name="window_settings">Settings</string>
    <string name="window_savedFurn">Saved Furniture</string>
    <string name="window_savedLay">Saved Layout</string>
    <string name="acctSet">Account Settings</string>
    <string name="savFurn">Saved Furniture</string>
    <string name="savLay">Saved Layout</string>
    <string name="addAcct">Add Account</string>
    <string name="logOut">Log Out</string>
    <string name="tabTables">Tables</string>
    <string name="tabChairs">Chairs</string>
    <string name="tabDesks">Desks</string>
    <string name="hint_inspiration">Inspiration awaits...</string>
    <string name="cd_search">Search</string>
    <string name="cd_filters">Filters</string>
    <string name="hint_layout">Layout finder</string>
    <string name="sign_in">Sign In</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="sign_in_to_continue">Please sign in to continue</string>
    <string name="email">Your email</string>
    <string name="password">Your password</string>
    <string name="remember_me">Always remember</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="or">Or</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="place_furn">Place Furniture</string>
    <string name="purchase_link">Purchase Link</string>
    <string name="add_Fav">Add To Favorites</string>
    <string name="item_menu">Item Menu</string>
    <string name="take_photo">Take Photo</string>
    <string name="ar_mode">AR View</string>

</resources>