<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="14dp"
    app:cardCornerRadius="16dp"
    app:cardElevation="10dp"
    android:minWidth="220dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <!-- Item name -->
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/item_menu"
            android:textStyle="bold"
            android:textSize="16sp"
            android:maxLines="2"
            android:paddingLeft="8dp"
            android:ellipsize="end"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <!-- Save toggle -->
        <com.google.android.material.materialswitch.MaterialSwitch
            android:id="@+id/switchSaved"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/add_Fav"
            android:textAlignment="center"
            android:layout_marginTop="8dp"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/tvTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <!-- Place -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnPlace"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/place_furn"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="6dp"
            app:layout_constraintTop_toBottomOf="@id/switchSaved"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btnLink"/>

        <!-- Link to buy -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/purchase_link"
            android:layout_marginTop="10dp"
            android:layout_marginStart="6dp"
            app:layout_constraintTop_toBottomOf="@id/switchSaved"
            app:layout_constraintStart_toEndOf="@id/btnPlace"
            app:layout_constraintEnd_toEndOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>
